--- a/app/src/act-card/act-card.template.html
+++ b/app/src/act-card/act-card.template.html
@@ -16,10 +16,11 @@
     </div>
     
     <div class="flex flex-row justify-between float-right">
-        <a href="#!/etkinlik/{{$ctrl.eventId}}/{{$ctrl.date}}/{{$ctrl.place}}/{{$ctrl.city}}">
+        <a href="{{$ctrl.linkToDetails}}">
             <md-button class="md-button" ng-click="$ctrl.get_details($ctrl.eventId)">DETAY</md-button>
         </a>
-        <md-button class="md-icon-button h-1 w-1 self-center">
+        <md-button class="md-icon-button h-1 w-1 self-center" ng-copy = "$ctrl.linkToDetails">
+            <input ng-model="$ctrl.linkToDetails" ng-value = "$ctrl.linkToDetails" ng-show = "false">
             <i class="material-icons">share</i>
         </md-button>
 
