sticky filter segment

--- a/app/src/act-details/act-details.template.html
+++ b/app/src/act-details/act-details.template.html
@@ -142,12 +142,12 @@
             </md-card-content>
 
 
-            <md-card-actions layout="row" layout-align="end center">
+            <md-card-actions layout="row" layout-align="space-between center">
                 <a href="{{$ctrl.selectedInstance.url}}" target = "_blank">
                     <md-button>BİLET AL</md-button>
                 </a>
 
-                <md-card-icon-actions>
+                <md-card-icon-actions layout = "row" layout-align = "end center">
                     <md-button class="md-icon-button" aria-label="Favorite">
                         <i class="material-icons">favorite</i>
                     </md-button>
