--- a/app/src/container/container.template.html
+++ b/app/src/container/container.template.html
@@ -21,6 +21,7 @@
         </div>
         <md-content class="w-full">
             <div ng-view autoscroll="false"></div>
+            <footer></footer>
         </md-content>
 
     </div>
