--- a/app/src/filter-segment/filter-segment.template.html
+++ b/app/src/filter-segment/filter-segment.template.html
@@ -1,4 +1,4 @@
-<div class="h-auto lg:float-right w-4/5 xs:w-9/12 sm:w-9/12 mx-auto sticky">
+<div class="h-auto lg:float-right w-4/5 xs:w-9/12 sm:w-9/12 mx-auto sticky top-0">
     <md-card class="md-padding">
         <md-content class="bg-white">
             <div>
