--- a/app/src/act-details/act-details.template.html
+++ b/app/src/act-details/act-details.template.html
@@ -63,9 +63,7 @@
             </md-card-content>
             <div class="h-px bg-gray-400 w-full my-2"></div>
             <md-card-content>
-                <p>
-                    {{$ctrl.event.details}}
-                </p>
+                <div style="white-space: pre-line">{{$ctrl.event.details}}</div>
             </md-card-content>
             <div class="h-px bg-gray-400 w-full my-2"></div>
             <md-card-content>
