centered uygula button

--- a/app/src/filter-segment/filter-segment.template.html
+++ b/app/src/filter-segment/filter-segment.template.html
@@ -38,9 +38,12 @@
                                 filter:$ctrl.cityInput">{{city}}</md-option>
                         </md-optgroup>
                     </md-select>
-           <md-button class = "md-button md-primary" ng-click = "$ctrl.filter()">
-               GO!
-           </md-button>
+            <div class = "text-center">
+                <md-button class = "md-button md-primary" ng-click = "$ctrl.filter()">
+                    uygula
+                </md-button>
+            </div>
+           
         </md-input-container>
         
     </md-card>
