--- a/app/src/main-content/main-content.template.html
+++ b/app/src/main-content/main-content.template.html
@@ -44,7 +44,7 @@
                             <act-card title="$ctrl.trim_name(act.name)" subtitle=""
                                 day-of-month="{{$ctrl.get_gunSayi(act.first_date)}}"
                                 month="{{$ctrl.get_ay(act.first_date)}}" event-id="{{act.event_id}}"
-                                image-url="{{act.image_url}}" date="NONE" place="{{$ctrl.bitistir(place.place)}}"
+                                image-url="{{act.image_url}}" date="NONE" place="{{$ctrl.bitistir(place.place_id)}}"
                                 show-top-left="false" city="{{$ctrl.filtersrv.filters.city}}"></act-card>
                         </div>
                     </div>
