--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -10,7 +10,7 @@
       </div>
       <div class="self-center">
         <a href="#!/">
-          <h2 class="my-auto">Aktivist</h2>
+          <h2 class="my-auto">biletograf</h2>
         </a>
       </div>
 
