trying to fix homepage

--- a/app/src/greet/greet.template.html
+++ b/app/src/greet/greet.template.html
@@ -4,10 +4,10 @@
     <div class="w-full flex flex-col justify-start h-screen items-center pt-4 text-red-400"
         style = "height: 50%; min-height: 400px; z-index: 10; background-image: url('assets/konser1920.jpg');background-repeat: no-repeat; background-position: center center; background-size : cover;">
     
-    <div class = "p-3">
-        <img class="mx-auto w-2/4" ng-src = "{{$ctrl.icons.logo}}" />
-        <div class = "text-xl text-white mx-auto" style = "width: 47rem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-    </div>
+    <div class = "p-3 w-full w-3/4 md:w-7/12 lg:w-3/4">
+        <img class="mx-auto" ng-src = "{{$ctrl.icons.logo}}" />
+        <div class = "text-xl text-white mx-auto px-3 md:px-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+        </div>
         
     </div>
     </div>
